fix margin for ff scrollbar

--- a/src/scss/includes/panels/favorite.scss
+++ b/src/scss/includes/panels/favorite.scss
@@ -92,7 +92,7 @@
 .favorite_panel__item__actions {
   float: right;
   display: none;
-  margin: 20px 0 0 0;
+  margin: 20px 10px 0 0;
 }
 
 .favorite_panel__clear {
@@ -107,7 +107,7 @@
 
 .favorite_panel__item__title {
   font-size: 16px;
-  max-width: 240px;
+  max-width: 230px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
